Added H2 config and db scripts, springboot dir structure